--- a/css/style.css
+++ b/css/style.css
@@ -1,312 +1,317 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
 
+#container {
+  width: 100%;
+  -webkit-perspective: 1000;
+  -webkit-perspective-origin: 50% 600px;
+}
 
+#stage {
+  width: 100%;
+  height: 50%;
+  -webkit-transition: -webkit-transform 2s;
+  -webkit-transform-style: preserve-3d;
+}
 
+#shape {
+  position: relative;
+  top: 200px;
+  margin: 0 auto;
+  height: 200px;
+  width: 200px;
+  -webkit-transform-style: preserve-3d;
+}
 
-html,body {
-      margin: 0;
-	  padding: 0;
-    width: 100%;
-    height: 100%;
-    overflow-y:hidden;
-    }
+.plane {
+  position: absolute;
+  height: 200px;
+  width: 200px;
+  border: 1px solid white;
+  -webkit-border-radius: 12px;
+  -webkit-box-sizing: border-box;
+  text-align: center;
+  font-family: Times, serif;
+  font-size: 124pt;
+  color: black;
+  background-color: rgba(255, 255, 255, 0.6);
+  -webkit-transition: -webkit-transform 2s, opacity 2s;
+  -webkit-backface-visibility: hidden;
+}
 
-    #container {
-      width: 100%;
-      -webkit-perspective: 1000;
-      -webkit-perspective-origin: 50% 600px;
-    }
-    #stage {
-      width: 100%;
-      height: 100%;
-      -webkit-transition: -webkit-transform 2s;
-      -webkit-transform-style: preserve-3d;
-    }
-    
-    #shape {
-      position: relative;
-      top: 215px;
-      margin: 0 auto;
-      height: 200px;
-      width: 200px;
-      -webkit-transform-style: preserve-3d;
-    }
-    
-    .plane {
-      position: absolute;
-      height: 200px;
-      width: 200px;
-      border: 1px solid white;
-      -webkit-border-radius: 12px;
-      -webkit-box-sizing: border-box;
-      text-align: center;
-      font-family: Times, serif;
-      font-size: 124pt;
-      color: black;
-      background-color: rgba(255, 255, 255, 0.6);
-      -webkit-transition: -webkit-transform 2s, opacity 2s;
-      -webkit-backface-visibility: hidden;
-    }
+#shape.backfaces .plane {
+  -webkit-backface-visibility: visible;
+}
 
-    #shape.backfaces .plane {
-      -webkit-backface-visibility: visible;
-    }
+#shape {
+  -webkit-animation: spin 10s infinite linear;
+}
 
-    #shape {
-      -webkit-animation: spin 10s infinite linear;
-    }
-
-    @-webkit-keyframes spin {
-      from { -webkit-transform: rotateY(0); }
-      to   { -webkit-transform: rotateY(360deg); }
-    }
-	
-    .one {
-		background-image: url(images/co1.jpg);
-		background-size:100% 100%;
-		background-repeat: no-repeat;
-    background-size: cover;
-     object-fit: contain;
-    }
-
-    .two {
-		background-image: url(images/co2.jpg);
-		background-size:100% 100%;
-		background-repeat: no-repeat;
-    background-size: cover;
-     object-fit: contain;
-    }
-
-    .three {
-		background-image: url(images/co1.jpg);
-		background-size:100% 100%;
-		background-repeat: no-repeat;
-    background-size: cover;
-     object-fit: contain;
-    }
-
-    .four {
-		background-image: url(images/co2.jpg);
-		background-size: 100% 100%;
-		background-repeat: no-repeat;
-    background-size: cover;
-     object-fit: contain;
-    }
-
-    .five {
-		background-image: url(images/co1.jpg);
-		background-size: 100% 100%;
-		background-repeat: no-repeat;
-    background-size: cover;
-     object-fit: contain;
-    }
-
-    .six {
-		background-image: url(images/co2.jpg);
-		background-size: 100% 100%;
-		background-repeat: no-repeat;
-    background-size: cover;
-     object-fit: contain;
-    }
-
-    .seven {
-		background-image: url(images/co1.jpg);
-		background-size:100% 100%;
-		background-repeat: no-repeat;
-    background-size: cover;
-     object-fit: contain;
-    }
-
-    .eight {
-		background-image: url(images/co2.jpg);
-		background-size:100% 100%;
-		background-repeat: no-repeat;
-    background-size: cover;
-     object-fit: contain;
-    }
-
-    .nine {
-		background-image: url(images/co1.jpg);
-		background-size: 100% 100%;
-		background-repeat: no-repeat;
-    background-size: cover;
-     object-fit: contain;
-    }
-
-    .ten {
-		background-image: url(images/co2.jpg);
-		background-size: 100% 100%;
-		background-repeat: no-repeat;
-    background-size: cover;
-     object-fit: contain;
-    }
-
-    .eleven {
-		background-image: url(images/co1.jpg);
-		background-size:100% 100%;
-		background-repeat: no-repeat;
-    background-size: cover;
-     object-fit: contain;
-    }
-
-    .twelve {
-		background-image: url(images/co2.jpg);
-		background-size: 100% 100%;
-		background-repeat: no-repeat;
-    background-size: cover;
-     object-fit: contain;
-    }
-
-    #shape.cube > .one {
-		opacity: 0.2;
-		-webkit-transform: scale3d(1.2, 1.2, 1.2) rotateX(90deg) translateZ(100px);
-    }
-
-    #shape.cube > .two {
-      opacity: 0.2;
-      -webkit-transform: scale3d(1.2, 1.2, 1.2) translateZ(100px);
-    }
-
-    #shape.cube > .three {
-      opacity: 0.2;
-      -webkit-transform: scale3d(1.2, 1.2, 1.2) rotateY(90deg) translateZ(100px);
-    }
-
-    #shape.cube > .four {
-      opacity: 0.2;
-      -webkit-transform: scale3d(1.2, 1.2, 1.2) rotateY(180deg) translateZ(100px);
-    }
-
-    #shape.cube > .five {
-      opacity: 0.2;
-      -webkit-transform: scale3d(1.2, 1.2, 1.2) rotateY(-90deg) translateZ(100px);
-    }
-
-    #shape.cube > .six {
-      opacity: 0.2;
-      -webkit-transform: scale3d(1.2, 1.2, 1.2) rotateX(-90deg) translateZ(100px) rotate(180deg);
-    }
-	
-	#shape:hover.cube > .one {
-		opacity: 1;
-		-webkit-transform: scale3d(1.5, 1.5, 1.5) rotateX(90deg) translateZ(150px);
-    }
-
-    #shape:hover.cube > .two {
-      opacity: 1;
-      -webkit-transform: scale3d(1.5, 1.5, 1.5) translateZ(150px);
-    }
-
-    #shape:hover.cube > .three {
-      opacity: 1;
-      -webkit-transform: scale3d(1.5, 1.5, 1.5) rotateY(90deg) translateZ(150px);
-    }
-
-    #shape:hover.cube > .four {
-      opacity: 1;
-      -webkit-transform: scale3d(1.5, 1.5, 1.5) rotateY(180deg) translateZ(150px);
-    }
-
-    #shape:hover.cube > .five {
-      opacity: 1;
-      -webkit-transform: scale3d(1.5, 1.5, 1.5) rotateY(-90deg) translateZ(150px);
-    }
-
-    #shape:hover.cube > .six {
-      opacity: 1;
-      -webkit-transform: scale3d(1.5, 1.5, 1.5) rotateX(-90deg) translateZ(150px) rotate(180deg);
-    }
-
-
-    #shape.cube > .seven {
-      -webkit-transform: scale3d(0.8, 0.8, 0.8) rotateX(90deg) translateZ(100px) rotate(180deg);
-    }
-
-    #shape.cube > .eight {
-      -webkit-transform: scale3d(0.8, 0.8, 0.8) translateZ(100px);
-    }
-
-    #shape.cube > .nine {
-      -webkit-transform: scale3d(0.8, 0.8, 0.8) rotateY(90deg) translateZ(100px);
-    }
-
-    #shape.cube > .ten {
-      -webkit-transform: scale3d(0.8, 0.8, 0.8) rotateY(180deg) translateZ(100px);
-    }
-
-    #shape.cube > .eleven {
-      -webkit-transform: scale3d(0.8, 0.8, 0.8) rotateY(-90deg) translateZ(100px);
-    }
-
-    #shape.cube > .twelve {
-      -webkit-transform: scale3d(0.8, 0.8, 0.8) rotateX(-90deg) translateZ(100px);
-    }
-
-    .ring > .one {
-      -webkit-transform: translateZ(380px);
-    }
-
-    .ring > .two {
-      -webkit-transform: rotateY(30deg) translateZ(380px);
-    }
-
-    .ring > .three {
-      -webkit-transform: rotateY(60deg) translateZ(380px);
-    }
-
-    .ring > .four {
-      -webkit-transform: rotateY(90deg) translateZ(380px);
-    }
-
-    .ring > .five {
-      -webkit-transform: rotateY(120deg) translateZ(380px);
-    }
-
-    .ring > .six {
-      -webkit-transform: rotateY(150deg) translateZ(380px);
-    }
-
-    .ring > .seven {
-      -webkit-transform: rotateY(180deg) translateZ(380px);
-    }
-
-    .ring > .eight {
-      -webkit-transform: rotateY(210deg) translateZ(380px);
-    }
-
-    .ring > .nine {
-      -webkit-transform: rotateY(-120deg) translateZ(380px);
-    }
-
-    .ring > .ten {
-      -webkit-transform: rotateY(-90deg) translateZ(380px);
-    }
-
-    .ring > .eleven {
-      -webkit-transform: rotateY(300deg) translateZ(380px);
-    }
-
-    .ring > .twelve {
-      -webkit-transform: rotateY(330deg) translateZ(380px);
-    }
-
-    .controls {
-      width: 70%;
-      margin: 0 auto;
-      padding: 5px 20px;
-    }
-    .controls > div {
-      margin: 10px;
-    }
-
-
-    button.nut-chuyen-hieu-ung {
-      width: 160px;
-      height: 60px;
-      cursor: pointer;
-      border-radius: 20px;
-      font-weight: bold;
-      background-color: coral;
-      border: none;
-      color: wheat;
+@-webkit-keyframes spin {
+  from {
+    -webkit-transform: rotateY(0);
   }
-  button.nut-chuyen-hieu-ung:hover {    background-color: #ff7f50a3;}
+
+  to {
+    -webkit-transform: rotateY(360deg);
+  }
+}
+
+.one {
+  background-image: url(images/thao66.jpg);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: contain;
+}
+
+.two {
+  background-image: url(images/thao1.jpg);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: contain;
+}
+
+.three {
+  background-image: url(images/thao4.jpg);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: contain;
+}
+
+.four {
+  background-image: url(images/thao5.jpg);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: contain;
+}
+
+.five {
+  background-image: url(images/thao3.jpg);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: contain;
+}
+
+.six {
+  background-image: url(images/thao22.jpg);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: contain;
+}
+
+.seven {
+  background-image: url(images/thao6.jpg);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: contain;
+}
+
+.eight {
+  background-image: url(images/thao1.jpg);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: contain;
+}
+
+.nine {
+  background-image: url(images/thao4.jpg);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: contain;
+}
+
+.ten {
+  background-image: url(images/thao5.jpg);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: contain;
+}
+
+.eleven {
+  background-image: url(images/thao3.jpg);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: contain;
+}
+
+.twelve {
+  background-image: url(images/thao2.jpg);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: contain;
+}
+
+#shape.cube>.one {
+  opacity: 0.2;
+  -webkit-transform: scale3d(1.2, 1.2, 1.2) rotateX(90deg) translateZ(100px);
+}
+
+#shape.cube>.two {
+  opacity: 0.2;
+  -webkit-transform: scale3d(1.2, 1.2, 1.2) translateZ(100px);
+}
+
+#shape.cube>.three {
+  opacity: 0.2;
+  -webkit-transform: scale3d(1.2, 1.2, 1.2) rotateY(90deg) translateZ(100px);
+}
+
+#shape.cube>.four {
+  opacity: 0.2;
+  -webkit-transform: scale3d(1.2, 1.2, 1.2) rotateY(180deg) translateZ(100px);
+}
+
+#shape.cube>.five {
+  opacity: 0.2;
+  -webkit-transform: scale3d(1.2, 1.2, 1.2) rotateY(-90deg) translateZ(100px);
+}
+
+#shape.cube>.six {
+  opacity: 0.2;
+  -webkit-transform: scale3d(1.2, 1.2, 1.2) rotateX(-90deg) translateZ(100px) rotate(180deg);
+}
+
+#shape:hover.cube>.one {
+  opacity: 1;
+  -webkit-transform: scale3d(1.5, 1.5, 1.5) rotateX(90deg) translateZ(150px);
+}
+
+#shape:hover.cube>.two {
+  opacity: 1;
+  -webkit-transform: scale3d(1.5, 1.5, 1.5) translateZ(150px);
+}
+
+#shape:hover.cube>.three {
+  opacity: 1;
+  -webkit-transform: scale3d(1.5, 1.5, 1.5) rotateY(90deg) translateZ(150px);
+}
+
+#shape:hover.cube>.four {
+  opacity: 1;
+  -webkit-transform: scale3d(1.5, 1.5, 1.5) rotateY(180deg) translateZ(150px);
+}
+
+#shape:hover.cube>.five {
+  opacity: 1;
+  -webkit-transform: scale3d(1.5, 1.5, 1.5) rotateY(-90deg) translateZ(150px);
+}
+
+#shape:hover.cube>.six {
+  opacity: 1;
+  -webkit-transform: scale3d(1.5, 1.5, 1.5) rotateX(-90deg) translateZ(150px) rotate(180deg);
+}
+
+#shape.cube>.seven {
+  -webkit-transform: scale3d(0.8, 0.8, 0.8) rotateX(90deg) translateZ(100px) rotate(180deg);
+}
+
+#shape.cube>.eight {
+  -webkit-transform: scale3d(0.8, 0.8, 0.8) translateZ(100px);
+}
+
+#shape.cube>.nine {
+  -webkit-transform: scale3d(0.8, 0.8, 0.8) rotateY(90deg) translateZ(100px);
+}
+
+#shape.cube>.ten {
+  -webkit-transform: scale3d(0.8, 0.8, 0.8) rotateY(180deg) translateZ(100px);
+}
+
+#shape.cube>.eleven {
+  -webkit-transform: scale3d(0.8, 0.8, 0.8) rotateY(-90deg) translateZ(100px);
+}
+
+#shape.cube>.twelve {
+  -webkit-transform: scale3d(0.8, 0.8, 0.8) rotateX(-90deg) translateZ(100px);
+}
+
+.ring>.one {
+  -webkit-transform: translateZ(380px);
+}
+
+.ring>.two {
+  -webkit-transform: rotateY(30deg) translateZ(380px);
+}
+
+.ring>.three {
+  -webkit-transform: rotateY(60deg) translateZ(380px);
+}
+
+.ring>.four {
+  -webkit-transform: rotateY(90deg) translateZ(380px);
+}
+
+.ring>.five {
+  -webkit-transform: rotateY(120deg) translateZ(380px);
+}
+
+.ring>.six {
+  -webkit-transform: rotateY(150deg) translateZ(380px);
+}
+
+.ring>.seven {
+  -webkit-transform: rotateY(180deg) translateZ(380px);
+}
+
+.ring>.eight {
+  -webkit-transform: rotateY(210deg) translateZ(380px);
+}
+
+.ring>.nine {
+  -webkit-transform: rotateY(-120deg) translateZ(380px);
+}
+
+.ring>.ten {
+  -webkit-transform: rotateY(-90deg) translateZ(380px);
+}
+
+.ring>.eleven {
+  -webkit-transform: rotateY(300deg) translateZ(380px);
+}
+
+.ring>.twelve {
+  -webkit-transform: rotateY(330deg) translateZ(380px);
+}
+
+.controls {
+  width: 70%;
+  margin: 0 auto;
+  padding: 5px 20px;
+}
+
+.controls>div {
+  margin: 10px;
+}
+
+
+button.nut-chuyen-hieu-ung {
+  width: 160px;
+  height: 60px;
+  cursor: pointer;
+  border-radius: 20px;
+  font-weight: bold;
+  background-color: coral;
+  border: none;
+  color: wheat;
+}
+
+button.nut-chuyen-hieu-ung:hover {
+  background-color: #ff7f50a3;
+}
