--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ body {
 }
 
 .one {
-  background-image: url(images/thao66.jpg);
+  background-image: url(images/a66.jpg);
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -71,7 +71,7 @@ body {
 }
 
 .two {
-  background-image: url(images/thao1.jpg);
+  background-image: url(images/a1.jpg);
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -79,7 +79,7 @@ body {
 }
 
 .three {
-  background-image: url(images/thao4.jpg);
+  background-image: url(images/a4.jpg);
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -87,7 +87,7 @@ body {
 }
 
 .four {
-  background-image: url(images/thao5.jpg);
+  background-image: url(images/a5.jpg);
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -95,7 +95,7 @@ body {
 }
 
 .five {
-  background-image: url(images/thao3.jpg);
+  background-image: url(images/a3.jpg);
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -103,7 +103,7 @@ body {
 }
 
 .six {
-  background-image: url(images/thao22.jpg);
+  background-image: url(images/a22.jpg);
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -111,7 +111,7 @@ body {
 }
 
 .seven {
-  background-image: url(images/thao6.jpg);
+  background-image: url(images/a6.jpg);
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -119,7 +119,7 @@ body {
 }
 
 .eight {
-  background-image: url(images/thao1.jpg);
+  background-image: url(images/a1.jpg);
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -127,7 +127,7 @@ body {
 }
 
 .nine {
-  background-image: url(images/thao4.jpg);
+  background-image: url(images/a4.jpg);
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -135,7 +135,7 @@ body {
 }
 
 .ten {
-  background-image: url(images/thao5.jpg);
+  background-image: url(images/a5.jpg);
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -143,7 +143,7 @@ body {
 }
 
 .eleven {
-  background-image: url(images/thao3.jpg);
+  background-image: url(images/a3.jpg);
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -151,7 +151,7 @@ body {
 }
 
 .twelve {
-  background-image: url(images/thao2.jpg);
+  background-image: url(images/a2.jpg);
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-size: cover;
